user profile management fully implimented
