# internal/application/middleware/fields_validator.go
@@ -34,6 +34,33 @@ func (fv *fieldsValidatorMiddleware) ValidateMobile(ctx *fiber.Ctx) error {
 	return ctx.Next()
 }
 
+func (fv *fieldsValidatorMiddleware) ValidateLogin(ctx *fiber.Ctx) error {
+	var fields auth.FieldPassLogin
+	response, err := pkg.ValidateRequestBody(&fields, ctx)
+	if err != nil {
+		return ctx.Status(fiber.StatusBadRequest).JSON(response)
+	}
+	return ctx.Next()
+}
+
+func (fv *fieldsValidatorMiddleware) ValidateNewPassword(ctx *fiber.Ctx) error {
+	re1 := regexp.MustCompile(`.{10}`)
+	re2 := regexp.MustCompile(`[@#$%^&*]+`)
+	var fields user.FieldUpdatePassword
+	response, err := pkg.ValidateRequestBody(&fields, ctx)
+	if err != nil {
+		return ctx.Status(fiber.StatusBadRequest).JSON(response)
+	}
+	if !re1.MatchString(fields.NewPassword) || !re2.MatchString(fields.NewPassword) {
+		result := shared.NewDefaultResponse(shared.ResponseArgs{
+			ErrStatus:  fiber.StatusBadRequest,
+			ErrMessage: shared.ErrPasswordValidation,
+		})
+		return ctx.Status(result.Code).JSON(result)
+	}
+	return ctx.Next()
+}
+
 func (fv *fieldsValidatorMiddleware) ValidateCode(ctx *fiber.Ctx) error {
 	var fields auth.FieldVerifyOTP
 	response, err := pkg.ValidateRequestBody(&fields, ctx)
