# internal/domain/interfaces/user.go
@@ -1,6 +1,7 @@
 package interfaces
 
 import (
+	"github.com/amirhosseinf79/user_registration/internal/domain/model"
 	"github.com/amirhosseinf79/user_registration/internal/dto/shared"
 	"github.com/amirhosseinf79/user_registration/internal/dto/user"
 	"github.com/gofiber/fiber/v2"
@@ -9,12 +10,17 @@ import (
 type UserHandler interface {
 	GetUserByID(ctx *fiber.Ctx) error
 	GetUsersList(ctx *fiber.Ctx) error
+	GetUserProfile(ctx *fiber.Ctx) error
 	UpdateProfileInfo(ctx *fiber.Ctx) error
+	UpdateUserPassword(ctx *fiber.Ctx) error
 }
 
 type UserService interface {
 	RegisterUserByNumber(phoneNumber string) (*user.ResponseDetails, *shared.ResponseOneMessage)
-	GetUserList(filter user.FilterUser) (*shared.ResponseList[user.ResponseDetails], *shared.ResponseOneMessage)
 	UpdateUserProfile(userID uint, fields user.FieldUpdateDetails) (*user.ResponseDetails, *shared.ResponseOneMessage)
+	UpdateUserPassword(userID uint, fields user.FieldUpdatePassword) (*user.ResponseDetails, *shared.ResponseOneMessage)
+	GetUserList(filter user.FilterUser) (*shared.ResponseList[user.ResponseDetails], *shared.ResponseOneMessage)
+	GetUserDetailsByMobile(mobile string) (*user.ResponseDetails, *shared.ResponseOneMessage)
 	GetUserDetailsByID(userID uint) (*user.ResponseDetails, *shared.ResponseOneMessage)
+	GetUserByMobile(mobile string) (*model.User, error)
 }
