# internal/dto/auth/password_login.go
@@ -1,0 +1,6 @@
+package auth
+
+type FieldPassLogin struct {
+	PhoneNumber string `json:"phoneNumber" validate:"required"`
+	Password    string `json:"password" validate:"required"`
+}
