# internal/dto/shared/errors_text.go
@@ -6,6 +6,8 @@ var ErrUsertNotFound = errors.New("user not found")
 var ErrInvalidToken = errors.New("invalid token")
 var ErrUnauthorized = errors.New("unauthorized")
 var ErrInvalidUser = errors.New("invalid user")
+var ErrInvalidCreds = errors.New("invalid mobile / password")
+var ErrInvalidPassword = errors.New("invalid password")
 var ErrInvalidIssuer = errors.New("invalid issuer")
 var ErrTokenExpired = errors.New("token expired")
 var ErrInvalidCode = errors.New("invalid code")
@@ -13,3 +15,4 @@ var ErrInvalidMobile = errors.New("invalid phone number")
 var ErrInvalidEmail = errors.New("invalid email")
 var ErrSmsRateLimited = errors.New("can not send sms")
 var ErrInternalServerError = errors.New("internal server error")
+var ErrPasswordValidation = errors.New("The password must be at least 10 characters long and include at least one special character.")
