# internal/infrastructure/server/route_auth.go
@@ -5,4 +5,5 @@ func (s server) InitAuthRoutes() {
 	route.Post("/send-otp", s.fieldValidator.ValidateMobile, s.authHandler.SendOTP)
 	route.Post("/verify-otp", s.fieldValidator.ValidateMobile, s.fieldValidator.ValidateCode, s.authHandler.LoginByOTP)
 	route.Post("/refresh-token", s.fieldValidator.ValidateRefreshToken, s.authHandler.RefreshToken)
+	route.Post("/login", s.fieldValidator.ValidateLogin, s.authHandler.LoginByPassword)
 }
